Initial Java 22 port.